--- a/manifest.json
+++ b/manifest.json
@@ -1,21 +1,21 @@
 {
-    "manifest_version": 2.0,
-    "id": "bghosts",
-    "name": "Groups/Hosts tree",
-    "version": "7.0.1",
-    "namespace": "BGmotHosts",
-    "author": "Evgeny Yurchenko",
-    "url": "https://bgmot.com",
-    "description": "Show groups/hosts as a tree under Monitoring -> Hosts Tree menu item",
-    "actions": {
-        "bghost.view": {
-            "class": "CControllerBGHostView",
-            "view": "module.monitoring.bghost.view"
-        },
-        "bghost.view.refresh": {
-            "class": "CControllerBGHostViewRefresh",
-            "view": "module.monitoring.bghost.view.refresh",
-            "layout": "layout.json"
-        }
+  "manifest_version": 2.0,
+  "id": "bghosts",
+  "name": "Groups/Hosts tree",
+  "version": "7.0.1",
+  "namespace": "BGmotHosts",
+  "author": "Evgeny Yurchenko / Mark D",
+  "url": "https://bgmot.com",
+  "description": "Show groups/hosts as a tree under Monitoring -> Hosts Tree menu item",
+  "actions": {
+    "bghost.view": {
+      "class": "CControllerBGHostView",
+      "view": "module.monitoring.bghost.view"
+    },
+    "bghost.view.refresh": {
+      "class": "CControllerBGHostViewRefresh",
+      "view": "module.monitoring.bghost.view.refresh",
+      "layout": "layout.json"
     }
+  }
 }
